Change LinkedList to ArrayList and add comments